src/main/java/gen/ImperativeCompConstParser.java
// Generated from /Users/wensiet/IdeaProjects/imperative-compiler/src/main/antlr4/ImperativeCompConst.g4 by ANTLR 4.13.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ImperativeCompConstParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SEMICOLON=1, VARSYM=2, COLON=3, INT_TYPE=4, REAL_TYPE=5, BOOL_TYPE=6, 
		RECORD_TYPE=7, ARRAY_TYPE=8, TYPESYM=9, ISSYM=10, ROUTINESYM=11, ENDSYM=12, 
		LPAREN=13, RPAREN=14, LBRACKET=15, RBRACKET=16, LBRACE=17, RBRACE=18, 
		COMMA=19, WHILESYM=20, FORSYM=21, FOREACHSYM=22, FROMSYM=23, LOOPSYM=24, 
		INSYM=25, RANGE=26, IFSYM=27, THENSYM=28, ELSESYM=29, AND=30, OR=31, XOR=32, 
		LSS=33, LEQ=34, GTR=35, GEQ=36, EQL=37, NEQ=38, PLUS=39, MINUS=40, TIMES=41, 
		SLASH=42, PERCENT=43, PERIOD=44, BECOMES=45, TRUE=46, FALSE=47, RETURNSYM=48, 
		REVERSESYM=49, IDENT=50, INT=51, REAL=52, WS=53;
	public static final int
		RULE_input = 0, RULE_program = 1, RULE_simple_declaration = 2, RULE_variable_declaration = 3, 
		RULE_array_variable_declaration = 4, RULE_expressions = 5, RULE_record_variable_declaration = 6, 
		RULE_record_field_assignments = 7, RULE_type_declaration = 8, RULE_routine_declaration = 9, 
		RULE_parameter_declarations = 10, RULE_type = 11, RULE_primitive_type = 12, 
		RULE_record_type = 13, RULE_record_variable_declarations = 14, RULE_array_type = 15, 
		RULE_body = 16, RULE_return_expression = 17, RULE_statement = 18, RULE_assignment = 19, 
		RULE_routine_call = 20, RULE_routine_call_arguments = 21, RULE_while_loop = 22, 
		RULE_for_loop = 23, RULE_foreach_loop = 24, RULE_range = 25, RULE_if_statement = 26, 
		RULE_expression = 27, RULE_relation = 28, RULE_simple = 29, RULE_factor = 30, 
		RULE_summand = 31, RULE_primary = 32, RULE_modifiable_primary = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"input", "program", "simple_declaration", "variable_declaration", "array_variable_declaration", 
			"expressions", "record_variable_declaration", "record_field_assignments", 
			"type_declaration", "routine_declaration", "parameter_declarations", 
			"type", "primitive_type", "record_type", "record_variable_declarations", 
			"array_type", "body", "return_expression", "statement", "assignment", 
			"routine_call", "routine_call_arguments", "while_loop", "for_loop", "foreach_loop", 
			"range", "if_statement", "expression", "relation", "simple", "factor", 
			"summand", "primary", "modifiable_primary"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'var'", "':'", "'integer'", "'real'", "'boolean'", "'record'", 
			"'array'", "'type'", "'is'", "'routine'", "'end'", "'('", "')'", "'['", 
			"']'", "'{'", "'}'", "','", "'while'", "'for'", "'foreach'", "'from'", 
			"'loop'", "'in'", "'..'", "'if'", "'then'", "'else'", "'and'", "'or'", 
			"'xor'", "'<'", "'<='", "'>'", "'>='", "'='", "'/='", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'.'", "':='", "'true'", "'false'", "'return'", "'reverse'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SEMICOLON", "VARSYM", "COLON", "INT_TYPE", "REAL_TYPE", "BOOL_TYPE", 
			"RECORD_TYPE", "ARRAY_TYPE", "TYPESYM", "ISSYM", "ROUTINESYM", "ENDSYM", 
			"LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "COMMA", 
			"WHILESYM", "FORSYM", "FOREACHSYM", "FROMSYM", "LOOPSYM", "INSYM", "RANGE", 
			"IFSYM", "THENSYM", "ELSESYM", "AND", "OR", "XOR", "LSS", "LEQ", "GTR", 
			"GEQ", "EQL", "NEQ", "PLUS", "MINUS", "TIMES", "SLASH", "PERCENT", "PERIOD", 
			"BECOMES", "TRUE", "FALSE", "RETURNSYM", "REVERSESYM", "IDENT", "INT", 
			"REAL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ImperativeCompConst.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ImperativeCompConstParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ImperativeCompConstParser.EOF, 0); }
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).exitInput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeCompConstVisitor ) return ((ImperativeCompConstVisitor<? extends T>)visitor).visitInput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			program();
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<Simple_declarationContext> simple_declaration() {
			return getRuleContexts(Simple_declarationContext.class);
		}
		public Simple_declarationContext simple_declaration(int i) {
			return getRuleContext(Simple_declarationContext.class,i);
		}
		public List<Routine_declarationContext> routine_declaration() {
			return getRuleContexts(Routine_declarationContext.class);
		}
		public Routine_declarationContext routine_declaration(int i) {
			return getRuleContext(Routine_declarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeCompConstVisitor ) return ((ImperativeCompConstVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1125900048402948L) != 0)) {
				{
				setState(74);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VARSYM:
				case TYPESYM:
					{
					setState(71);
					simple_declaration();
					}
					break;
				case ROUTINESYM:
					{
					setState(72);
					routine_declaration();
					}
					break;
				case WHILESYM:
				case FORSYM:
				case FOREACHSYM:
				case IFSYM:
				case IDENT:
					{
					setState(73);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_declarationContext extends ParserRuleContext {
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public Type_declarationContext type_declaration() {
			return getRuleContext(Type_declarationContext.class,0);
		}
		public Array_variable_declarationContext array_variable_declaration() {
			return getRuleContext(Array_variable_declarationContext.class,0);
		}
		public Record_variable_declarationContext record_variable_declaration() {
			return getRuleContext(Record_variable_declarationContext.class,0);
		}
		public Simple_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).enterSimple_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).exitSimple_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeCompConstVisitor ) return ((ImperativeCompConstVisitor<? extends T>)visitor).visitSimple_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_declarationContext simple_declaration() throws RecognitionException {
		Simple_declarationContext _localctx = new Simple_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simple_declaration);
		try {
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				variable_declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				type_declaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				array_variable_declaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(82);
				record_variable_declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_declarationContext extends ParserRuleContext {
		public TerminalNode VARSYM() { return getToken(ImperativeCompConstParser.VARSYM, 0); }
		public TerminalNode IDENT() { return getToken(ImperativeCompConstParser.IDENT, 0); }
		public TerminalNode ISSYM() { return getToken(ImperativeCompConstParser.ISSYM, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ImperativeCompConstParser.SEMICOLON, 0); }
		public TerminalNode COLON() { return getToken(ImperativeCompConstParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).enterVariable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).exitVariable_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeCompConstVisitor ) return ((ImperativeCompConstVisitor<? extends T>)visitor).visitVariable_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable_declaration);
		try {
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				match(VARSYM);
				setState(86);
				match(IDENT);
				setState(87);
				match(ISSYM);
				setState(88);
				expression();
				setState(89);
				match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				match(VARSYM);
				setState(92);
				match(IDENT);
				setState(93);
				match(COLON);
				setState(94);
				type();
				setState(95);
				match(SEMICOLON);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				match(VARSYM);
				setState(98);
				match(IDENT);
				setState(99);
				match(COLON);
				setState(100);
				type();
				setState(101);
				match(ISSYM);
				setState(102);
				expression();
				setState(103);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Array_variable_declarationContext extends ParserRuleContext {
		public TerminalNode VARSYM() { return getToken(ImperativeCompConstParser.VARSYM, 0); }
		public TerminalNode IDENT() { return getToken(ImperativeCompConstParser.IDENT, 0); }
		public TerminalNode COLON() { return getToken(ImperativeCompConstParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ISSYM() { return getToken(ImperativeCompConstParser.ISSYM, 0); }
		public TerminalNode LBRACKET() { return getToken(ImperativeCompConstParser.LBRACKET, 0); }
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(ImperativeCompConstParser.RBRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(ImperativeCompConstParser.SEMICOLON, 0); }
		public Array_variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).enterArray_variable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).exitArray_variable_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeCompConstVisitor ) return ((ImperativeCompConstVisitor<? extends T>)visitor).visitArray_variable_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Array_variable_declarationContext array_variable_declaration() throws RecognitionException {
		Array_variable_declarationContext _localctx = new Array_variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_array_variable_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(VARSYM);
			setState(108);
			match(IDENT);
			setState(109);
			match(COLON);
			setState(110);
			type();
			setState(111);
			match(ISSYM);
			setState(112);
			match(LBRACKET);
			setState(113);
			expressions(0);
			setState(114);
			match(RBRACKET);
			setState(115);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionsContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(ImperativeCompConstParser.COMMA, 0); }
		public ExpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).enterExpressions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).exitExpressions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeCompConstVisitor ) return ((ImperativeCompConstVisitor<? extends T>)visitor).visitExpressions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionsContext expressions() throws RecognitionException {
		return expressions(0);
	}

	private ExpressionsContext expressions(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionsContext _localctx = new ExpressionsContext(_ctx, _parentState);
		ExpressionsContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_expressions, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(118);
			expression();
			}
			_ctx.stop = _input.LT(-1);
			setState(125);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expressions);
					setState(120);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(121);
					match(COMMA);
					setState(122);
					expression();
					}
					} 
				}
				setState(127);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Record_variable_declarationContext extends ParserRuleContext {
		public TerminalNode VARSYM() { return getToken(ImperativeCompConstParser.VARSYM, 0); }
		public TerminalNode IDENT() { return getToken(ImperativeCompConstParser.IDENT, 0); }
		public TerminalNode COLON() { return getToken(ImperativeCompConstParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ISSYM() { return getToken(ImperativeCompConstParser.ISSYM, 0); }
		public TerminalNode LBRACE() { return getToken(ImperativeCompConstParser.LBRACE, 0); }
		public Record_field_assignmentsContext record_field_assignments() {
			return getRuleContext(Record_field_assignmentsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(ImperativeCompConstParser.RBRACE, 0); }
		public TerminalNode SEMICOLON() { return getToken(ImperativeCompConstParser.SEMICOLON, 0); }
		public Record_variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_record_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).enterRecord_variable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).exitRecord_variable_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeCompConstVisitor ) return ((ImperativeCompConstVisitor<? extends T>)visitor).visitRecord_variable_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Record_variable_declarationContext record_variable_declaration() throws RecognitionException {
		Record_variable_declarationContext _localctx = new Record_variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_record_variable_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(VARSYM);
			setState(129);
			match(IDENT);
			setState(130);
			match(COLON);
			setState(131);
			type();
			setState(132);
			match(ISSYM);
			setState(133);
			match(LBRACE);
			setState(134);
			record_field_assignments(0);
			setState(135);
			match(RBRACE);
			setState(136);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Record_field_assignmentsContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(ImperativeCompConstParser.IDENT, 0); }
		public TerminalNode ISSYM() { return getToken(ImperativeCompConstParser.ISSYM, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ImperativeCompConstParser.SEMICOLON, 0); }
		public Record_field_assignmentsContext record_field_assignments() {
			return getRuleContext(Record_field_assignmentsContext.class,0);
		}
		public Record_field_assignmentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_record_field_assignments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).enterRecord_field_assignments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImperativeCompConstListener ) ((ImperativeCompConstListener)listener).exitRecord_field_assignments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImperativeCompConstVisitor ) return ((ImperativeCompConstVisitor<? extends T>)visitor).visitRecord_field_assignments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Record_field_assignmentsContext record_field_assignments() throws RecognitionException {
		return record_field_assignments(0);
	}

	private Record_field_assignmentsContext record_field_assignments(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Record_field_assignmentsContext _localctx = new Record_field_assignmentsContext(_ctx, _parentState);
		Record_field_assignmentsContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_record_field_assignments, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(139);
			match(IDENT);
			setState(140);
			match(ISSYM);
			setState(141);
			expression();
			setState(142);
			match(SEMICOLON);
			}
			_ctx.stop = _input.LT(-1);
			setState(152);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Record_field_assignmentsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_record_field_assignments);
					setState(144);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(145);
					match(IDENT);
					setState(146);
					match(ISSYM);
					setState(147);
					expression();
					setState(148);
					match(SEMICOLON);
					}
					} 
				}
				setState(154);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
